# robotskripsi

my_bot/: CMakeLists.txt  package.xml  setup.py
my_bot/config/: drive_bot.rviz  joystick.yaml  main.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  view_bot.rviz
my_bot/description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
my_bot/launch/: amcl_launch.py  go_to_pose2_launch.py  go_to_pose3_launch.py  go_to_pose4_launch.py  go_to_pose5_launch.py  go_to_pose_launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  map_server.py  rsp.launch.py
my_bot/scripts/: choose_goal.py  go_to_pose.py  go_to_pose2.py  go_to_pose3.py  go_to_pose4.py  go_to_pose5.py  qos_bridge.py  reset.py  sound_tester.py  voice_recognition.py
my_bot/worlds/: obstacles.world  test_lab.world
